--- a/firmware/config/boards/hellen/hellen72/connectors/main.yaml
+++ b/firmware/config/boards/hellen/hellen72/connectors/main.yaml
@@ -1,3 +1,8 @@
+#
+# todo: what's the deal with dual mode A/C switch?
+# todo: what's the deal with dual mode Power Steering Switch? and a few others?
+#
+
 pins:
   - pin: 2A
     id: GPIOG_7
