make things happy

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -12,7 +12,7 @@
 			// uncomment args below to only debug a particular test
 			//"args": ["--gtest_filter=etb.testTargetTpsIsFloatBug945"],
 			"stopAtEntry": false,
-			"cwd": "${workspaceFolder}/unit_tests/build/",
+			"cwd": "${workspaceFolder}/unit_tests/",
 			"environment": [],
 			"externalConsole": false,
 			"MIMode": "gdb",
@@ -36,7 +36,7 @@
             "name": "Debug F40x",
             "type": "cortex-debug",
             "request": "launch",
-            "cwd": "${workspaceFolder}",
+            "cwd": "${workspaceFolder}/firmware",
             "executable": "${workspaceRoot}/firmware/build/rusefi.elf",
             "device": "STM32F407V",
             "v1": false,
@@ -49,7 +49,7 @@
             "name": "Debug F42x",
             "type": "cortex-debug",
             "request": "launch",
-            "cwd": "${workspaceFolder}",
+            "cwd": "${workspaceFolder}/firmware",
             "executable": "${workspaceRoot}/firmware/build/rusefi.elf",
             "device": "STM32F429Z",
             "v1": false,
@@ -62,7 +62,7 @@
             "name": "Debug F7x6",
             "type": "cortex-debug",
             "request": "launch",
-            "cwd": "${workspaceFolder}",
+            "cwd": "${workspaceFolder}/firmware",
             "executable": "${workspaceRoot}/firmware/build/rusefi.elf",
             "device": "STM32F767V",
             "v1": false,
@@ -75,7 +75,7 @@
             "name": "Debug H743",
             "type": "cortex-debug",
             "request": "launch",
-            "cwd": "${workspaceFolder}",
+            "cwd": "${workspaceFolder}/firmware",
             "executable": "${workspaceRoot}/firmware/build/rusefi.elf",
             "device": "STM32H743V",
             "v1": false,
