--- a/unit_tests/Makefile
+++ b/unit_tests/Makefile
@@ -51,6 +51,7 @@ CPPSRC += $(ALLCPPSRC) \
 	$(HW_LAYER_EMS_CPP) \
 	$(TUNERSTUDIO_SRC_CPP) \
 	$(HW_SENSORS_SRC) \
+	$(HW_LAYER_DRIVERS_CORE_CPP) \
 	$(TRIGGER_SRC_CPP) \
 	$(INIT_SRC_CPP) \
 	$(PROJECT_DIR)/../unit_tests/logicdata.cpp \
