--- a/simulator/Makefile
+++ b/simulator/Makefile
@@ -167,7 +167,7 @@ CPPSRC = $(ALLCPPSRC) \
 	$(CONTROLLERS_SRC_CPP) \
 	$(PROJECT_DIR)/development/sensor_chart.cpp \
 	$(HW_LAYER_EMS_CPP) \
-	$(HW_SENSORS_SRC) \
+	$(HW_SENSORS_CPP) \
 	$(HW_LAYER_DRIVERS_CPP) \
 	$(TRIGGER_SRC_CPP) \
 	$(TRIGGER_DECODERS_SRC_CPP) \
