makefiles: remove legacy EMS sufix

--- a/firmware/Makefile
+++ b/firmware/Makefile
@@ -209,7 +209,7 @@ CSRC =  $(ALLCSRC) \
 	$(SYSTEMSRC) \
 	$(ENGINES_SRC) \
 	$(CONSOLESRC) \
-	$(HW_LAYER_EMS) \
+	$(HW_LAYER_SRC) \
 	$(HW_LAYER_DRIVERS_CORE) \
 	$(HW_LAYER_DRIVERS) \
 	$(CONTROLLERSSRC) \
@@ -228,7 +228,7 @@ CPPSRC = $(ALLCPPSRC) \
 	$(UTILSRC_CPP) \
 	$(SYSTEMSRC_CPP) \
 	$(ENGINES_SRC_CPP) \
-	$(HW_LAYER_EMS_CPP) \
+	$(HW_LAYER_CPP) \
 	$(HW_LAYER_DRIVERS_CORE_CPP) \
 	$(HW_LAYER_DRIVERS_CPP) \
 	$(HW_SENSORS_CPP) \
