--- a/simulator/Makefile
+++ b/simulator/Makefile
@@ -164,7 +164,7 @@ CPPSRC = $(ALLCPPSRC) \
 	$(CONTROLLERS_ALGO_SRC_CPP) \
 	$(CONTROLLERS_SRC_CPP) \
 	$(PROJECT_DIR)/development/sensor_chart.cpp \
-	$(HW_LAYER_EMS_CPP) \
+	$(HW_LAYER_CPP) \
 	$(HW_SENSORS_CPP) \
 	$(HW_LAYER_DRIVERS_CPP) \
 	$(HW_LAYER_DRIVERS_CORE_CPP) \
