--- a/unit_tests/Makefile
+++ b/unit_tests/Makefile
@@ -49,7 +49,7 @@ CPPSRC += $(ALLCPPSRC) \
 	$(FRAMEWORK_SRC_CPP) \
 	$(TESTS_SRC_CPP) \
 	$(SYSTEMSRC_CPP) \
-	$(HW_LAYER_EMS_CPP) \
+	$(HW_LAYER_CPP) \
 	$(TUNERSTUDIO_SRC_CPP) \
 	$(HW_SENSORS_CPP) \
 	$(TRIGGER_SRC_CPP) \
