--- a/unit_tests/Makefile
+++ b/unit_tests/Makefile
@@ -42,6 +42,7 @@ CPPSRC += $(ALLCPPSRC) \
 	$(TRIGGER_DECODERS_SRC_CPP) \
 	$(ENGINES_SRC_CPP) \
 	$(CONTROLLERS_SRC_CPP) \
+	$(HW_LAYER_DRIVERS_CPP) \
 	$(CONTROLLERS_CORE_SRC_CPP) \
 	$(CONTROLLERS_MATH_SRC_CPP) \
 	$(CONTROLLERS_SENSORS_SRC_CPP) \
