--- a/simulator/Makefile
+++ b/simulator/Makefile
@@ -169,6 +169,7 @@ CPPSRC = $(ALLCPPSRC) \
 	$(HW_LAYER_EMS_CPP) \
 	$(HW_SENSORS_CPP) \
 	$(HW_LAYER_DRIVERS_CPP) \
+	$(HW_LAYER_DRIVERS_CORE_CPP) \
 	$(TRIGGER_SRC_CPP) \
 	$(TRIGGER_DECODERS_SRC_CPP) \
 	$(SYSTEMSRC_CPP) \
